# wasm-experiments

wasi-messaging-demo/: Makefile  adapter.component.wasm  guest.component.wasm
wasm-compose/: build.sh  service.wit
wasm-compose/middleware/: Cargo.toml
wasm-compose/middleware/src/: lib.rs
wasm-compose/server/: config.yml  service.wasm
wasm-compose/service/: Cargo.toml
wasm-compose/service/src/: lib.rs
