[package]
name = "middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flate2 = "1.0.24"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = { path = "../service.wit", world = "service.middleware" }

[workspace]
